--- a/package.json
+++ b/package.json
@@ -4,7 +4,18 @@
     "main": "index.js",
     "repository": "https://github.com/iambalaam/iambalaam.com.git",
     "author": "Guy Balaam <guybal@amazon.com>",
+    "scripts": {
+        "test:webpack": "webpack"
+    },
     "devDependencies": {
-        "@cloudflare/wrangler": "^1.1.1"
+        "@cloudflare/wrangler": "^1.1.1",
+        "@types/node": "^12.7.1",
+        "react": "^16.9.0",
+        "react-dom": "^16.9.0",
+        "ts-loader": "^6.0.4",
+        "types-cloudflare-worker": "^1.0.1",
+        "typescript": "^3.5.3",
+        "webpack": "^4.39.2",
+        "webpack-cli": "^3.3.6"
     }
 }
