--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "devDependencies": {
         "@cloudflare/wrangler": "^1.1.1",
         "@types/node": "^12.7.1",
+        "@types/react": "^16.9.1",
+        "@types/react-dom": "^16.8.5",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "ts-loader": "^6.0.4",
