--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "@types/node": "^12.7.1",
         "@types/react": "^16.9.1",
         "@types/react-dom": "^16.8.5",
+        "@types/react-router-dom": "^4.3.5",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
+        "react-router-dom": "^5.1.0",
         "ts-loader": "^6.0.4",
         "types-cloudflare-worker": "^1.0.1",
         "typescript": "^3.5.3",
