--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "author": "Guy Balaam <guybal@amazon.com>",
     "scripts": {
         "test": "echo \"no unit tests\"",
+        "start:server": "nodemon -x ts-node dev/server/dev-server.tsx",
         "build": "webpack"
     },
     "devDependencies": {
         "@cloudflare/wrangler": "^1.1.1",
+        "@types/express": "^4.17.1",
         "@types/node": "^12.7.1",
         "@types/react": "^16.9.1",
         "@types/react-dom": "^16.8.5",
         "@types/react-router-dom": "^4.3.5",
+        "express": "^4.17.1",
+        "nodemon": "^1.19.3",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-router-dom": "^5.1.0",
         "ts-loader": "^6.0.4",
+        "ts-node": "^8.4.1",
         "types-cloudflare-worker": "^1.0.1",
         "typescript": "^3.5.3",
         "webpack": "^4.39.2",
