Checking git version present in workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,9 +7,9 @@ on:
   push:
     branches:
       - master
+      - testing-build-artifacts
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -35,6 +35,4 @@ jobs:
           npm install -g yarn
           yarn install
           CF_API_KEY=${{secrets.CF_API_KEY}} CF_EMAIL=${{secrets.CF_EMAIL}} npx wrangler publish --release
-
-
-      
+          git version
