Moving to a single job

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,29 +10,20 @@ on:
       - testing-build-artifacts
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
         with:
           node-version: 12
-      - run: |
+      - name: install
+        run: |
           npm install -g yarn
           yarn install
-          yarn test
-          yarn build
-
-  publish:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@master
-        with:
-          node-version: 12
-      - run: |
-          npm install -g yarn
-          yarn install
-          CF_API_KEY=${{secrets.CF_API_KEY}} CF_EMAIL=${{secrets.CF_EMAIL}} npx wrangler publish --release
-          git version
+      - name: test
+        run: yarn test
+      - name: build
+        run: yarn build
+      - name: publish
+        run: CF_API_KEY=${{secrets.CF_API_KEY}} CF_EMAIL=${{secrets.CF_EMAIL}} npx wrangler publish --release
