Enabling build artifacts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,4 @@ jobs:
           rm -rf tmp
           git add -A
           git commit -m "Build artifacts"
-          ls -la
-          git show HEAD
-          git log
+          git push
