--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,4 +45,4 @@ jobs:
           rm -rf tmp
           git add -A
           git commit -m "Build artifacts"
-          git push
+          git push "https://${{ github.actor	}}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" dist
