Removing ssh setup

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
     branches:
       - master
       - testing-build-artifacts
+      - testing-is-ssh-needed
 
 jobs:
   release:
@@ -27,9 +28,6 @@ jobs:
         run: yarn build
       - name: publish
         run: CF_API_KEY=${{ secrets.CF_API_KEY }} CF_EMAIL=${{ secrets.CF_EMAIL }} npx wrangler publish --release
-      - uses: webfactory/ssh-agent@v0.1.1
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - name: upload artifacts
         run: |
           git config user.name "BUILD"
