--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "author": "Guy Balaam <guybal@amazon.com>",
     "scripts": {
         "test": "echo \"no unit tests\"",
-        "start": "yarn start:server",
+        "start": "NODE_ENV=development runst-p clean start:server",
         "start:server": "nodemon -x ts-node dev/server/dev-server.tsx",
-        "build": "webpack"
+        "release": "NODE_ENV=production run-s clean build",
+        "clean": "rm -rf dist && mkdir -p dist",
+        "build": "run-p build:*",
+        "build:server": "webpack --config webpack.server.config.js",
+        "build:client": "webpack --config webpack.client.config.js"
     },
     "devDependencies": {
         "@cloudflare/wrangler": "^1.1.1",
@@ -19,6 +23,7 @@
         "@types/react-router-dom": "^4.3.5",
         "express": "^4.17.1",
         "nodemon": "^1.19.3",
+        "npm-run-all": "^4.1.5",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-router-dom": "^5.1.0",
