--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "iamabalaam-com"
 type = "webpack"
+webpack_config = "./webpack.server.config.js"
 zone_id = "9ced80f834bee67728b800fed24b6601"
 private = false
 account_id = "b991bdd4aaa82b5ded7c7bde09f964d1"
