--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "module": "commonjs",
         "lib": [
             "dom",
-            "es2015",
+            "esnext",
             "webworker"
         ]
     },
