--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
         "@types/react": "^16.9.1",
         "@types/react-dom": "^16.8.5",
         "@types/react-router-dom": "^4.3.5",
+        "css-loader": "^3.2.0",
         "express": "^4.17.1",
+        "mini-css-extract-plugin": "^0.8.0",
+        "node-sass": "^4.12.0",
         "nodemon": "^1.19.3",
         "npm-run-all": "^4.1.5",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-router-dom": "^5.1.0",
+        "sass-loader": "^8.0.0",
         "ts-loader": "^6.0.4",
         "ts-node": "^8.4.1",
         "types-cloudflare-worker": "^1.0.1",
