--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - master
+      - build-artifacts-in-dist
 
 jobs:
   release:
@@ -37,7 +38,7 @@ jobs:
           git checkout dist
           find . -not -path "./.git" -not -path "./.git/*" -delete
           git stash pop
-          mv tmp/* .
+          mv tmp dist
           rm -rf tmp
           git add -A
           git commit -m "Build artifacts"
