--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,8 @@ jobs:
           yarn install
       - name: test
         run: yarn test
-      - name: release
-        run: yarn release
+      - name: build
+        run: yarn build
       - name: publish
         run: CF_API_KEY=${{ secrets.CF_API_KEY }} CF_EMAIL=${{ secrets.CF_EMAIL }} npx wrangler publish --release
       - name: upload artifacts
