Committing build artifacts before publishing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,6 @@ jobs:
         run: yarn test
       - name: build
         run: yarn build
-      - name: publish
-        run: CF_API_KEY=${{ secrets.CF_API_KEY }} CF_EMAIL=${{ secrets.CF_EMAIL }} npx wrangler publish --release
       - name: upload artifacts
         run: |
           git config user.name "BUILD"
@@ -38,4 +36,7 @@ jobs:
           mv tmp dist
           git add dist
           git commit -m "Build artifacts"
-          git push "https://${{ github.actor	}}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" dist
+          git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" dist
+          git checkout master
+      - name: publish
+        run: CF_API_KEY=${{ secrets.CF_API_KEY }} CF_EMAIL=${{ secrets.CF_EMAIL }} npx wrangler publish --release
