--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - master
+      - artifacts-from-commit
 
 jobs:
   release:
@@ -35,6 +36,7 @@ jobs:
           mv tmp dist
           git add dist
           git commit -m "Build artifacts"
+          BUILD_COMMIT=$(git rev-parse HEAD)
           git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" dist
           git checkout master
       - name: publish
