Mocking .module.scss files for dev-server

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,13 @@
             "dom",
             "esnext",
             "webworker"
+        ],
+        "typeRoots": [
+            "./node_modules/@types",
+            "@types"
         ]
     },
     "include": [
-        "src",
-        "@types"
+        "src"
     ]
 }
