--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "test": "echo \"no unit tests\"",
         "start": "NODE_ENV=development run-p clean start:server",
-        "start:server": "nodemon -x ts-node dev/server/dev-server.tsx",
+        "start:server": "nodemon -x ts-node --require ./dev/server/setup.js dev/server/dev-server.tsx",
         "build": "NODE_ENV=production run-s clean webpack",
         "clean": "rm -rf dist && mkdir -p dist",
         "webpack": "run-p webpack:*",
@@ -23,6 +23,7 @@
         "@types/react-router-dom": "^4.3.5",
         "css-loader": "^3.2.0",
         "express": "^4.17.1",
+        "jest-css-modules-transform": "^3.1.0",
         "mini-css-extract-plugin": "^0.8.0",
         "node-sass": "^4.12.0",
         "nodemon": "^1.19.3",
