--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "author": "Guy Balaam <guybal@amazon.com>",
     "scripts": {
         "test": "echo \"no unit tests\"",
-        "start": "NODE_ENV=development run-p clean start:server",
+        "start": "NODE_ENV=development run-p start:server",
         "start:server": "nodemon -x ts-node --require ./dev/server/setup.js dev/server/dev-server.tsx",
         "build": "NODE_ENV=production run-s clean webpack",
         "clean": "rm -rf dist && mkdir -p dist",
         "webpack": "run-p webpack:*",
         "webpack:server": "webpack --config webpack.server.config.js",
-        "webpack:client": "webpack --config webpack.client.config.js"
+        "webpack:client": "webpack --config webpack.client.config.js",
+        "watch-assets": "webpack --config webpack.client.config.js --watch"
     },
     "devDependencies": {
         "@cloudflare/wrangler": "^1.1.1",
