--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
         "test": "echo \"no unit tests\"",
         "start": "NODE_ENV=development run-p start:server",
         "start:server": "nodemon -x ts-node --require ./dev/server/setup.js dev/server/dev-server.tsx",
-        "build": "NODE_ENV=production run-s clean webpack",
+        "build": "NODE_ENV=production run-s clean generate-models webpack",
         "clean": "rm -rf dist && mkdir -p dist",
+        "generate-models": "ts-node scripts/generate-models.ts",
         "webpack": "run-p webpack:*",
         "webpack:server": "webpack --config webpack.server.config.js",
         "webpack:client": "webpack --config webpack.client.config.js",
@@ -23,7 +24,7 @@
         "@types/react-dom": "^16.8.5",
         "@types/react-router-dom": "^4.3.5",
         "css-loader": "^3.2.0",
-        "dae2css": "^1.0.2",
+        "dae2css": "^1.1.0",
         "express": "^4.17.1",
         "jest-css-modules-transform": "^3.1.0",
         "mini-css-extract-plugin": "^0.8.0",
