--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,16 +27,23 @@ jobs:
         run: yarn build
       - name: upload artifacts
         run: |
+          echo "Configuring github user"
           git config user.name "BUILD"
           git config user.email "BUILD@GITHUB_ACTIONS"
+          echo "Creating ./tmp folder"
           rm -rf tmp
           mv dist tmp
+          echo "Checking out dist branch"
           git checkout dist
+          echo "Replacing build artifacts"
           rm -rf dist
           mv tmp dist
           git add dist
+          echo "Comitting build artifacts"
           git commit -m "Build artifacts"
+          echo "Pushing build artifacts"
           git push "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
+          echo "Resetting workspace to publish"
           git checkout ${{ github.sha }}
       - name: publish
         run: |
