Adding static hosting and grid layout

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
         "test": "echo \"no unit tests\"",
         "start": "NODE_ENV=development run-p start:server",
         "start:server": "nodemon -x ts-node --require ./dev/server/setup.js dev/server/dev-server.tsx",
-        "build": "NODE_ENV=production run-s clean generate-models webpack",
+        "build": "NODE_ENV=production run-s clean generate-models copy-static webpack",
         "clean": "rm -rf dist && mkdir -p dist",
         "generate-models": "ts-node scripts/generate-models.ts",
+        "copy-static": "cp static/* dist",
         "webpack": "run-p webpack:*",
         "webpack:server": "webpack --config webpack.server.config.js",
         "webpack:client": "webpack --config webpack.client.config.js",
@@ -26,6 +27,7 @@
         "css-loader": "^3.2.0",
         "dae2css": "^1.1.2",
         "express": "^4.17.1",
+        "file-loader": "^6.2.0",
         "jest-css-modules-transform": "^3.1.0",
         "mini-css-extract-plugin": "^0.8.0",
         "node-sass": "^4.12.0",
