--- a/package.json
+++ b/package.json
@@ -33,15 +33,19 @@
         "node-sass": "^4.13.1",
         "nodemon": "^1.19.3",
         "npm-run-all": "^4.1.5",
+        "postcss-loader": "^4.2.0",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-router-dom": "^5.1.0",
-        "sass-loader": "^8.0.0",
+        "sass-loader": "10",
         "ts-loader": "^6.0.4",
         "ts-node": "^8.4.1",
         "types-cloudflare-worker": "^1.0.1",
         "typescript": "^3.5.3",
         "webpack": "^4.39.2",
         "webpack-cli": "^3.3.6"
+    },
+    "dependencies": {
+        "postcss-preset-env": "^6.7.0"
     }
 }
