--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "author": "Guy Balaam <guybal@amazon.com>",
     "scripts": {
         "test": "echo \"no unit tests\"",
-        "start": "NODE_ENV=development run-p start:server",
+        "start": "cross-env NODE_ENV=development run-p start:server",
         "start:server": "nodemon -x ts-node --require ./dev/server/setup.js dev/server/dev-server.tsx",
-        "build": "NODE_ENV=production run-s clean generate-models copy-static webpack",
-        "clean": "rm -rf dist && mkdir -p dist",
+        "build": "cross-env NODE_ENV=production run-s clean generate-models copy-static webpack",
+        "clean": "rimraf dist && mkdirp dist",
         "generate-models": "ts-node scripts/generate-models.ts",
-        "copy-static": "cp static/* dist",
+        "copy-static": "copyfiles static/* dist",
         "webpack": "run-p webpack:*",
         "webpack:server": "webpack --config webpack.server.config.js",
         "webpack:client": "webpack --config webpack.client.config.js",
@@ -24,19 +24,24 @@
         "@types/react": "^16.9.1",
         "@types/react-dom": "^16.8.5",
         "@types/react-router-dom": "^5.1.0",
+        "copyfiles": "^2.4.1",
+        "cross-env": "^7.0.3",
         "css-loader": "^3.2.0",
         "dae2css": "^1.1.2",
         "express": "^4.17.1",
         "file-loader": "^6.2.0",
         "jest-css-modules-transform": "^3.1.0",
         "mini-css-extract-plugin": "^0.8.0",
+        "mkdirp": "^1.0.4",
         "node-sass": "^4.13.1",
         "nodemon": "^1.19.3",
         "npm-run-all": "^4.1.5",
         "postcss-loader": "^4.2.0",
+        "postcss-preset-env": "^6.7.0",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-router-dom": "^5.1.0",
+        "rimraf": "^3.0.2",
         "sass-loader": "10",
         "ts-loader": "^6.0.4",
         "ts-node": "^8.4.1",
@@ -44,8 +49,5 @@
         "typescript": "^3.5.3",
         "webpack": "^4.39.2",
         "webpack-cli": "^3.3.6"
-    },
-    "dependencies": {
-        "postcss-preset-env": "^6.7.0"
     }
 }
