--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "dae2css": "^1.1.2",
         "express": "^4.17.1",
         "file-loader": "^6.2.0",
-        "jest-css-modules-transform": "^3.1.0",
+        "jest": "^29.5.0",
+        "jest-css-modules-transform": "^4.4.0",
         "mini-css-extract-plugin": "^0.8.0",
         "mkdirp": "^1.0.4",
         "nodemon": "^1.19.3",
@@ -49,7 +50,7 @@
         "ts-loader": "^6.0.4",
         "ts-node": "^8.4.1",
         "types-cloudflare-worker": "^1.0.1",
-        "typescript": "^3.5.3",
+        "typescript": "^5",
         "webpack": "^4.39.2",
         "webpack-cli": "^3.3.6"
     }
