--- a/package.json
+++ b/package.json
@@ -53,5 +53,6 @@
         "typescript": "^5",
         "webpack": "^4.39.2",
         "webpack-cli": "^3.3.6"
-    }
+    },
+    "dependencies": {}
 }
