--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "types-cloudflare-worker": "^1.0.1",
         "typescript": "^5",
         "webpack": "^4.39.2",
+        "webpack-bundle-analyzer": "^4.8.0",
         "webpack-cli": "^3.3.6"
-    },
-    "dependencies": {}
+    }
 }
