--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,3 +5,6 @@ zone_id = "9ced80f834bee67728b800fed24b6601"
 private = false
 account_id = "b991bdd4aaa82b5ded7c7bde09f964d1"
 route = "iambalaam.com/*"
+
+[observability]
+enabled = true
