--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
         "node": "^16"
     },
     "devDependencies": {
-        "@cloudflare/wrangler": "^1.1.1",
         "@types/express": "^4.17.1",
         "@types/node": "^12.7.1",
         "@types/react": "^16.9.1",
@@ -53,6 +52,7 @@
         "typescript": "^5",
         "webpack": "^4.39.2",
         "webpack-bundle-analyzer": "^4.8.0",
-        "webpack-cli": "^3.3.6"
+        "webpack-cli": "^3.3.6",
+        "wrangler": "^3.111.0"
     }
 }
