--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,9 @@ jobs:
           deno-version: v2.x
 
       - name: Build step
-        run: deno task build
+        run: |
+          deno task build:models
+          deno task build:styles
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
