Fixing build scripts

--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "noUncheckedIndexedAccess": true,
     "strict": true,
         "jsx": "react",
         "jsxFactory": "h",
@@ -12,11 +13,13 @@
         ]
   },
   "tasks": {
+    "copy:static": "deno run --allow-read=static --allow-write=dist/static scripts/copy-static.ts",
     "build:models": "deno run --allow-read=models --allow-write=models scripts/build-models.ts",
-    "build:styles": "deno run --allow-read --allow-env --allow-write=. scripts/build-styles.ts --outDir=dist/static" 
+    "build:styles": "deno run --allow-read --allow-env --allow-write=. scripts/build-styles.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
+    "@std/http": "jsr:@std/http@1",
     "@std/path": "jsr:@std/path@1",
     "dae2css":"https://esm.sh/dae2css@1.2.0",
     "preact-render-to-string": "https://esm.sh/preact-render-to-string@6.5.13",
