--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           deno-version: v2.x
 
       - name: Build step
-        run: "deno task build:models deno task build:styles "
+        run: "deno task build"
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
@@ -32,5 +32,3 @@ jobs:
           project: "guybalaam-iambalaamco-97"
           entrypoint: "src/main.tsx"
           root: ""
-          
-          
