--- a/deno.json
+++ b/deno.json
@@ -13,9 +13,14 @@
         ]
   },
   "tasks": {
+    "clean": "rm -rf dist && mkdir -p dist/static",
     "copy:static": "deno run --allow-read=static --allow-write=dist/static scripts/copy-static.ts",
     "build:models": "deno run --allow-read=models --allow-write=models scripts/build-models.ts",
-    "build:styles": "deno run --allow-read --allow-env --allow-write=. scripts/build-styles.ts"
+    "build:styles": "deno run --allow-read --allow-env --allow-write=. scripts/build-styles.ts",
+    "build": {
+      "command": "deno task 'build:*'",
+      "dependencies": ["clean", "copy:static"]
+    }
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
