--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: Deploy
 on:
   push:
-    branches: deno
+    branches: master
   pull_request:
-    branches: deno
+    branches: master
 
 jobs:
   deploy:
