--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,6 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "guybalaam-iambalaamco-97"
+          project: "iambalaam-com"
           entrypoint: "src/main.tsx"
           root: ""
