--- a/deno.json
+++ b/deno.json
@@ -2,21 +2,24 @@
   "compilerOptions": {
     "noUncheckedIndexedAccess": true,
     "strict": true,
-        "jsx": "react",
-        "jsxFactory": "h",
-        "jsxFragmentFactory":"Fragment",
-        "lib": [
-            "dom",
-            "esnext",
-            "webworker",
-            "deno.ns"
-        ]
+    "jsx": "react",
+    "jsxFactory": "h",
+    "jsxFragmentFactory": "Fragment",
+    "lib": [
+      "dom",
+      "esnext",
+      "webworker",
+      "deno.ns"
+    ]
   },
   "tasks": {
     "clean": "rm -rf dist && mkdir -p dist/static",
     "copy:static": "deno run --allow-read=static --allow-write=dist/static scripts/copy-static.ts",
     "build:models": "deno run --allow-read=models --allow-write=models scripts/build-models.ts",
-    "build:styles": "deno run --allow-read --allow-env --allow-write=. scripts/build-styles.ts",
+    "build:styles": {
+      "command": "deno run --allow-read --allow-env --allow-write=. scripts/build-styles.ts",
+      "dependencies": ["build:models"]
+    },
     "build": {
       "command": "deno task 'build:*'",
       "dependencies": ["clean", "copy:static"]
@@ -26,7 +29,7 @@
     "@std/assert": "jsr:@std/assert@1",
     "@std/http": "jsr:@std/http@1",
     "@std/path": "jsr:@std/path@1",
-    "dae2css":"https://esm.sh/dae2css@1.2.0",
+    "dae2css": "https://esm.sh/dae2css@1.2.0",
     "preact-render-to-string": "https://esm.sh/preact-render-to-string@6.5.13",
     "preact": "https://esm.sh/preact@10.26.4",
     "preact/hooks": "https://esm.sh/preact@10.26.4/hooks",
